--- a/css/style.css
+++ b/css/style.css
@@ -356,6 +356,11 @@
     z-index: -2;
 }
 
+.carousel-item img, .img-background{
+    object-fit: cover;
+    object-position: center;
+}
+
 .hotlist ul{
     border: 1px solid white;
     padding: 20px;
@@ -538,9 +543,42 @@
 .pre-register .container img{
     display: block!important;
 }
-@media (max-width:676px){
+
+.copyright{
+    margin-left: 8rem;
+}
+@media (max-width:767px){
     .pre-register .container img{
         display: inline-block!important;
+    }
+
+    .jumbotron-landing{
+        padding-top: 100px;
+        min-height: 150vh;
+    }
+    .copyright {
+        margin-left: 5rem;
+    }
+}
+
+@media (max-width:575px){
+    .container{
+        padding: 0px 30px;
+    }
+
+    .copyright{
+        margin-left: 1rem;
+        margin-top: 2rem;
+    }
+}
+
+@media (max-width:992px) {
+    .container{
+        max-width: 100%!important;
+        padding: 0px 50px;
+    }
+    .jumbotron-landing{
+        padding-top: 120px;
     }
 }
 
